# CoreLog

./: 开发日志.md
example/: args.c  args.cpp  argsCPP
example/designpatterns/Factory/: AbstractFactory  SimpleFactory
example/designpatterns/Singleton/: EagerSingleton  LazySingleton.cpp
logs/: CMakeLists.txt
logs/example/: CMakeLists.txt  Functionality_Test.cc
logs/include/: buffer.hpp  format.hpp  level.hpp  logger.hpp  looper.hpp  message.hpp  sink.hpp  windlog.hpp
logs/include/util/: file_util.hpp  time_util.hpp
logs/perf/: CMakeLists.txt  bench.cc
logs/test/: CMakeLists.txt  buffer_test.cc  format_test.cc  sink_test.cc  synclogger_test.cc  util_test.cc
logs/unittest/: asynclogger_test.cc  globalInterface_test.cc  globalloggerbuilder_test.cc  level_test.cc  synclogger_test.cc  util_test.cc
practice/designpatterns/Builder/: Builder  Builder.cpp
practice/designpatterns/Factory/: AbstractFactory.cpp  FactoryMethod  FactoryMethod.cpp  SimpleFactory.cpp
practice/designpatterns/Proxy/: Proxy  Proxy.cpp
practice/designpatterns/Singleton/: EagerSingleton.cpp  LazySingleton
practice/varargs/: argsC
